test/parsing/errors/labelIneligibleStmt.compopts
--detailed-errors # labelIneligibleStmt-detailed.good
--no-detailed-errors # labelIneligibleStmt-brief.good
